--- a/css/styles.css
+++ b/css/styles.css
@@ -76,12 +76,13 @@ img {
   align-items: center;
 }
 .site-nav {
-  margin-left: 90px;
   display: flex;
   align-items: baseline;
 }
-
-.site-nav .link {
+.header__logo {
+  margin-right: 90px;
+}
+.site-nav__link {
   padding: 32px 0;
   display: block;
   font-weight: 500;
@@ -92,15 +93,15 @@ img {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.site-nav .link.current {
+.site-nav__link.current {
   color: var(--accent-color);
 }
-.site-nav .link:hover,
-.site-nav .link:focus {
+.site-nav__link:hover,
+.site-nav__link:focus {
   color: var(--accent-color);
 }
 
-.nav-item {
+.site-nav__item {
   margin-right: 50px;
   position: relative;
 }
@@ -116,7 +117,7 @@ img {
   left: 0;
 }
 
-.nav-item:last-child {
+.site-nav__item:last-child {
   margin-right: 0;
 }
 .logo {
@@ -126,10 +127,10 @@ img {
   line-height: 1.19;
   text-decoration: none;
 }
-.web {
+.logo__web {
   color: var(--accent-color);
 }
-.studio {
+.logo__studio {
   color: #000000;
 }
 
@@ -145,32 +146,32 @@ img {
   clip-path: inset(50%);
   margin: -1px;
 }
-.contacts-list {
+.contacts {
   display: flex;
 }
 
-.contact-item {
+.contacts__item {
   margin-right: 50px;
   display: flex;
   color: var(--secondary-text-color);
 }
 
-.contact-item:last-child {
+.contacts__item:last-child {
   margin-right: 0;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-item:hover,
-.contact-item:focus {
+.contacts__item:hover,
+.contacts__item:focus {
   color: var(--accent-color);
 }
 
-.contact-icon {
+.contacts__icon {
   margin-right: 10px;
   fill: currentColor;
 }
 
-.contact-link {
+.contacts__link {
   padding: 32px 0;
   font-weight: 500;
   font-size: 14px;
@@ -182,8 +183,8 @@ img {
   align-items: center;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-link:hover,
-.contact-link:focus {
+.contacts__link:hover,
+.contacts__link:focus {
   color: var(--accent-color);
 }
 
@@ -199,7 +200,7 @@ img {
   margin: 0 auto;
 }
 
-.hero-title {
+.hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -241,7 +242,7 @@ img {
   background-color: var(--main-bg-color);
 }
 
-.advantage-item {
+.advantage__item {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -250,12 +251,12 @@ img {
   margin-bottom: 10px;
   margin-top: 30px;
 }
-.advantage-list {
+.advantage__list {
   display: flex;
   justify-content: space-between;
 }
 
-.advantage-card {
+.advantage__card {
   width: 270px;
   height: 120px;
   border-radius: 4px;
@@ -268,15 +269,15 @@ img {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.advantage-card:hover {
+.advantage__card:hover {
   border: 1px solid #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.advantage-info:not(:last-child) {
+.advantage__info:not(:last-child) {
   margin-right: 30px;
 }
-.advantage-description {
+.advantage__description {
   font-size: 14px;
   line-height: 1.71;
   color: var(--secondary-text-color);
@@ -284,20 +285,25 @@ img {
 .examples {
   padding-top: 0;
 }
-.examples-title,
-.team-title {
+.title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   text-align: center;
   color: var(--main-text-color);
+}
+
+.examples__title,
+.team__title,
+.clients__title {
   margin-bottom: 50px;
 }
-.examples-list {
+
+.examples__list {
   display: flex;
   justify-content: space-between;
 }
-.example-card:not(:last-child) {
+.example__card:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -427,7 +433,7 @@ img {
   background-color: var(--accent-bg-color);
   padding: 60px 0;
 }
-.footer .studio {
+.logo__studio--footer {
   color: var(--main-bg-color);
 }
 
@@ -442,34 +448,34 @@ img {
   flex-grow: 1;
 }
 
-.location {
+.adress__location {
   font-size: 14px;
   line-height: 1.71;
   color: var(--main-bg-color);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.location:focus,
-.location:hover {
+.adress__location:focus,
+.adress__location:hover {
   color: var(--accent-color);
 }
 
 .adress {
   margin-top: 20px;
 }
-.adress-list {
+.adress__list {
   font-style: normal;
   margin-top: 20px;
 }
 
-.adress-item {
+.adres__item {
   margin-bottom: 9px;
 }
 
-.adress-item:last-child {
+.adres__item:last-child {
   margin-bottom: 0;
 }
-.adress .link {
+.adress__link {
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
@@ -477,27 +483,27 @@ img {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.adress .link:focus,
-.adress .link:hover {
+.adress__link:focus,
+.adress__link:hover {
   color: var(--accent-color);
 }
 
-.join-title {
+.footer-title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
   color: var(--main-bg-color);
 }
-.join-social-list {
+.social-media__list {
   display: flex;
   margin-top: 20px;
 }
 
-.social-icon + .social-icon {
+.social-media__icon + .social-media__icon {
   margin-left: 10px;
 }
-.social-link {
+.social-media__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -508,8 +514,8 @@ img {
   fill: var(--main-bg-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-link:hover,
-.social-link:focus {
+.social-media__link:hover,
+.social-media__link:focus {
   background-color: var(--accent-color);
 }
 
