--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,14 +1,13 @@
 .header {
   background-color: var(--main-bg-color);
   border-bottom: 1px solid #ececec;
-
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
 }
 
+.header__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .navigation {
   display: flex;
   align-items: center;
@@ -35,9 +34,21 @@
   &:focus {
     color: var(--accent-color);
   }
-}
-.site-nav__link.current {
-  color: var(--accent-color);
+
+  &--current {
+    color: var(--accent-color);
+
+    &::after {
+      content: '';
+      width: 48px;
+      height: 4px;
+      background-color: var(--accent-color);
+      border-radius: 2px;
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+    }
+  }
 }
 
 .site-nav__item {
@@ -47,17 +58,6 @@
   &:last-child {
     margin-right: 0;
   }
-}
-
-.link.current::after {
-  content: '';
-  width: 48px;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-  position: absolute;
-  bottom: -1px;
-  left: 0;
 }
 
 .contacts {
