--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -8,21 +8,20 @@
   background-size: cover;
   max-width: 1600px;
   margin: 0 auto;
-}
 
-.hero__title {
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--main-bg-color);
-  margin-bottom: 30px;
-}
-
-.center-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50px;
+  &__title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--main-bg-color);
+    margin-bottom: 30px;
+  }
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+  }
 }
