--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,14 @@
   box-sizing: border-box;
 }
 
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+}
+
 p,
 h1,
 h2,
@@ -14,17 +22,15 @@ h6 {
   margin: 0;
 }
 
-ul,
-ol {
-  margin: 0;
-  padding-left: 0;
-  padding-bottom: 0;
-}
-
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
 }
 
 body {
@@ -32,15 +38,6 @@ body {
   font-family: "Roboto", sans-serif;
   color: var(--main-text-color);
   letter-spacing: 0.03em;
-}
-
-.link {
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.list {
-  list-style: none;
 }
 
 :root {
@@ -84,9 +81,6 @@ body {
   font-size: 26px;
   line-height: 1.19;
   text-decoration: none;
-}
-
-.logo__web {
   color: var(--accent-color);
 }
 
@@ -111,14 +105,6 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button:focus, .button:hover {
-  color: var(--main-text-color);
-}
-
-.title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
   color: var(--main-text-color);
 }
 
@@ -164,6 +150,20 @@ body {
 
 .section {
   padding: 94px 0;
+}
+.section--nopt {
+  padding-top: 0;
+}
+.section--otherbg {
+  background-color: var(--secondary-bg-color);
+}
+.section__title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  color: var(--main-text-color);
+  margin-bottom: 50px;
 }
 
 .modal {
@@ -311,7 +311,8 @@ body {
   background-color: var(--main-bg-color);
   border-bottom: 1px solid #ececec;
 }
-.header .container {
+
+.header__container {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -345,20 +346,10 @@ body {
 .site-nav__link:hover, .site-nav__link:focus {
   color: var(--accent-color);
 }
-
-.site-nav__link.current {
+.site-nav__link--current {
   color: var(--accent-color);
 }
-
-.site-nav__item {
-  margin-right: 50px;
-  position: relative;
-}
-.site-nav__item:last-child {
-  margin-right: 0;
-}
-
-.link.current::after {
+.site-nav__link--current::after {
   content: "";
   width: 48px;
   height: 4px;
@@ -367,6 +358,14 @@ body {
   position: absolute;
   bottom: -1px;
   left: 0;
+}
+
+.site-nav__item {
+  margin-right: 50px;
+  position: relative;
+}
+.site-nav__item:last-child {
+  margin-right: 0;
 }
 
 .contacts {
@@ -417,7 +416,6 @@ body {
   max-width: 1600px;
   margin: 0 auto;
 }
-
 .hero__title {
   font-weight: 900;
   font-size: 44px;
@@ -427,19 +425,14 @@ body {
   color: var(--main-bg-color);
   margin-bottom: 30px;
 }
-
-.center-button {
+.hero__button {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 50px;
 }
 
-.advantage {
-  background-color: var(--main-bg-color);
-}
-
-.advantage__item {
+.advantage__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -449,7 +442,7 @@ body {
   margin-top: 30px;
 }
 
-.advantage__list {
+.advantage {
   display: flex;
   justify-content: space-between;
 }
@@ -470,7 +463,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
-.advantage__info:not(:last-child) {
+.advantage__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -481,34 +474,30 @@ body {
 }
 
 .team {
-  background-color: var(--secondary-bg-color);
-}
-
-.team-members {
   display: flex;
   justify-content: space-between;
 }
 
-.member-info {
+.team__item {
   background-color: var(--main-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-.member-info:not(:last-child) {
+.team__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.member-box {
+.team__box {
   padding: 30px 0;
 }
 
-.team-member-name {
+.team__title {
   font-weight: 500;
   font-size: 16px;
   text-align: center;
 }
 
-.team-member-description {
+.team__description {
   font-size: 16px;
   line-height: 1.19;
   color: var(--secondary-text-color);
@@ -517,16 +506,16 @@ body {
   margin-bottom: 16px;
 }
 
-.team-member-social {
+.team-social {
   display: flex;
   justify-content: center;
 }
 
-.team-member-item + .team-member-item {
+.team-social__item + .team-social__item {
   margin-left: 10px;
 }
 
-.team-member-link {
+.team-social__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -537,41 +526,20 @@ body {
   fill: #afb1b8;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.team-member-link:hover, .team-member-link:focus {
+.team-social__link:hover, .team-social__link:focus {
   background-color: var(--accent-color);
   fill: var(--main-bg-color);
 }
 
-.team__title {
-  margin-bottom: 50px;
-}
-
 .clients {
-  background-color: var(--main-bg-color);
-}
-
-.clients-header {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  color: var(--main-text-color);
-  margin-bottom: 50px;
-}
-
-.clients__title {
-  margin-bottom: 50px;
-}
-
-.clients-list {
   display: flex;
 }
 
-.clients-item + .clients-item {
+.clients__item + .clients__item {
   margin-left: 30px;
 }
 
-.clients-link {
+.clients__link {
   width: 170px;
   height: 92px;
   border-radius: 4px;
@@ -583,21 +551,17 @@ body {
   fill: #afb1b8;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.clients-link:hover, .clients-link:focus {
+.clients__link:hover, .clients__link:focus {
   fill: var(--accent-color);
   border: 1px solid var(--accent-color);
 }
 
 .examples {
-  padding-top: 0;
-}
-
-.examples__list {
   display: flex;
   justify-content: space-between;
 }
 
-.example__card:not(:last-child) {
+.examples__item:not(:last-child) {
   margin-right: 30px;
 }
 
@@ -605,7 +569,7 @@ body {
   margin-bottom: 50px;
 }
 
-.example-cover-text {
+.examples__text {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -622,7 +586,7 @@ body {
   width: 100%;
 }
 
-.example-card-wrap {
+.examples__wrap {
   position: relative;
 }
 
@@ -635,45 +599,45 @@ body {
   color: var(--main-bg-color);
 }
 
-.contact-wrap {
+.footer__container {
   display: flex;
   align-items: baseline;
 }
 
-.contacts-bottom {
+.footer-contacts {
   width: calc(25% - 15px);
   margin-right: 70px;
   flex-grow: 1;
 }
 
-.adress__location {
+.footer-adress__location {
   font-size: 14px;
   line-height: 1.71;
   color: var(--main-bg-color);
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.adress__location:focus, .adress__location:hover {
+.footer-adress__location:focus, .footer-adress__location:hover {
   color: var(--accent-color);
 }
 
-.adress {
+.footer-adress {
   margin-top: 20px;
 }
 
-.adress__list {
+.footer-adress__list {
   font-style: normal;
   margin-top: 20px;
 }
 
-.adres__item {
+.footer-adress__item {
   margin-bottom: 9px;
 }
-.adres__item:last-child {
+.footer-adress__item:last-child {
   margin-bottom: 0;
 }
 
-.adress__link {
+.footer-adress__link {
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
@@ -681,11 +645,11 @@ body {
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.adress__link:focus, .adress__link:hover {
+.footer-adress__link:focus, .footer-adress__link:hover {
   color: var(--accent-color);
 }
 
-.footer-title {
+.footer__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -693,7 +657,7 @@ body {
   color: var(--main-bg-color);
 }
 
-.social-media__list {
+.footer-social__list {
   display: flex;
   margin-top: 20px;
 }
@@ -702,7 +666,7 @@ body {
   margin-left: 10px;
 }
 
-.social-media__link {
+.footer-social__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -713,8 +677,12 @@ body {
   fill: var(--main-bg-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-media__link:hover, .social-media__link:focus {
+.footer-social__link:hover, .footer-social__link:focus {
   background-color: var(--accent-color);
+}
+
+.footer-subscription {
+  margin-left: 93px;
 }
 
 .terms {
@@ -724,16 +692,12 @@ body {
   color: var(--accent-color);
 }
 
-.subscription {
-  margin-left: 93px;
-}
-
-.sub-wrap {
+.footer-subscription__wrap {
   margin-top: 20px;
   display: flex;
 }
 
-.sub-email {
+.footer-subscription__email {
   background-color: transparent;
   width: 358px;
   height: 50px;
@@ -745,28 +709,28 @@ body {
   outline: none;
   color: var(--main-bg-color);
 }
-.sub-email::placeholder {
+.footer-subscription__email::placeholder {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.25;
   color: rgba(255, 255, 255, 0.6);
 }
-.sub-email:focus {
+.footer-subscription__email:focus {
   border-color: var(--accent-color);
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.sub-icon {
+.footer-subscription__icon {
   margin-left: 10px;
   fill: currentColor;
 }
 
-.sub-btn {
+.footer-subscription__btn {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.sub-btn:hover, .sub-btn:focus {
+.footer-subscription__btn:hover, .footer-subscription__btn:focus {
   fill: var(--accent-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
