--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -3,6 +3,15 @@
 *::after {
   box-sizing: border-box;
 }
+
+ul,
+ol {
+  list-style-type: none;
+  margin: 0;
+  padding-left: 0;
+  padding-bottom: 0;
+}
+
 p,
 h1,
 h2,
@@ -13,14 +22,13 @@ h6 {
   margin: 0;
 }
 
-ul,
-ol {
-  margin: 0;
-  padding-left: 0;
-  padding-bottom: 0;
-}
 img {
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
 }
