--- a/sass/layout/_advantage.scss
+++ b/sass/layout/_advantage.scss
@@ -1,8 +1,4 @@
-.advantage {
-  background-color: var(--main-bg-color);
-}
-
-.advantage__item {
+.advantage__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -11,7 +7,7 @@
   margin-bottom: 10px;
   margin-top: 30px;
 }
-.advantage__list {
+.advantage {
   display: flex;
   justify-content: space-between;
 }
@@ -34,7 +30,7 @@
   }
 }
 
-.advantage__info:not(:last-child) {
+.advantage__item:not(:last-child) {
   margin-right: 30px;
 }
 
