--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,18 +6,18 @@
   color: var(--main-bg-color);
 }
 
-.contact-wrap {
+.footer__container {
   display: flex;
   align-items: baseline;
 }
 
-.contacts-bottom {
+.footer-contacts {
   width: calc(25% - 15px);
   margin-right: 70px;
   flex-grow: 1;
 }
 
-.adress__location {
+.footer-adress__location {
   font-size: 14px;
   line-height: 1.71;
   color: var(--main-bg-color);
@@ -30,22 +30,22 @@
   }
 }
 
-.adress {
+.footer-adress {
   margin-top: 20px;
 }
-.adress__list {
+.footer-adress__list {
   font-style: normal;
   margin-top: 20px;
 }
 
-.adres__item {
+.footer-adress__item {
   margin-bottom: 9px;
   &:last-child {
     margin-bottom: 0;
   }
 }
 
-.adress__link {
+.footer-adress__link {
   font-size: 14px;
   line-height: 1.71;
   font-style: normal;
@@ -58,7 +58,7 @@
   }
 }
 
-.footer-title {
+.footer__title {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -66,7 +66,7 @@
   color: var(--main-bg-color);
 }
 
-.social-media__list {
+.footer-social__list {
   display: flex;
   margin-top: 20px;
 }
@@ -74,7 +74,7 @@
 .social-media__icon + .social-media__icon {
   margin-left: 10px;
 }
-.social-media__link {
+.footer-social__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -91,6 +91,10 @@
   }
 }
 
+.footer-subscription {
+  margin-left: 93px;
+}
+
 .terms {
   margin-left: 4px;
   font-size: 14px;
@@ -98,15 +102,12 @@
   color: var(--accent-color);
 }
 
-.subscription {
-  margin-left: 93px;
-}
-.sub-wrap {
+.footer-subscription__wrap {
   margin-top: 20px;
   display: flex;
 }
 
-.sub-email {
+.footer-subscription__email {
   background-color: transparent;
   width: 358px;
   height: 50px;
@@ -131,11 +132,11 @@
   }
 }
 
-.sub-icon {
+.footer-subscription__icon {
   margin-left: 10px;
   fill: currentColor;
 }
-.sub-btn {
+.footer-subscription__btn {
   display: flex;
   align-items: center;
   justify-content: center;
