--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,13 +1,9 @@
 .team {
-  background-color: var(--secondary-bg-color);
-}
-
-.team-members {
   display: flex;
   justify-content: space-between;
 }
 
-.member-info {
+.team__item {
   background-color: var(--main-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -18,16 +14,16 @@
   }
 }
 
-.member-box {
+.team__box {
   padding: 30px 0;
 }
 
-.team-member-name {
+.team__title {
   font-weight: 500;
   font-size: 16px;
   text-align: center;
 }
-.team-member-description {
+.team__description {
   font-size: 16px;
   line-height: 1.19;
   color: var(--secondary-text-color);
@@ -36,16 +32,16 @@
   margin-bottom: 16px;
 }
 
-.team-member-social {
+.team-social {
   display: flex;
   justify-content: center;
 }
 
-.team-member-item + .team-member-item {
+.team-social__item + .team-social__item {
   margin-left: 10px;
 }
 
-.team-member-link {
+.team-social__link {
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -62,8 +58,4 @@
     background-color: var(--accent-color);
     fill: var(--main-bg-color);
   }
-}
-
-.team__title {
-  margin-bottom: 50px;
 }
