--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -27,11 +27,6 @@
   cursor: pointer;
 }
 
-.porfolio-item:hover .portfolio-hover-text,
-.portfolio-card:focus .portfolio-hover-text {
-  transform: translateY(0);
-}
-
 .portfolio-card {
   display: block;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -63,6 +58,11 @@
   padding-bottom: 63px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  .porfolio-item:hover &,
+  .portfolio-card:focus & {
+    transform: translateY(0);
+  }
 }
 
 .card-info {
